--- a/RVTools.ipynb
+++ b/RVTools.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8d3c1350fb490e080e29db29d9a13ac693909fb5d8da8f2110fd84aec8a8e7e3"
+  "signature": "sha256:7e41af0bcb0983bdcf93f969b96873962a7e720d51d00df84486297d4d52e183"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -15,7 +15,7 @@
       "import numpy as np\n",
       "import pickle\n",
       "import pylab as plt\n",
-      "import scipy as sp \n",
+      "from scipy import interpolate, signal, optimize, constants\n",
       "import pyfits as pf\n",
       "import sys"
      ],
@@ -43,7 +43,7 @@
       "        \n",
       "    #median outliers\n",
       "    if medianRange>0:\n",
-      "        fluxMed = sp.signal.medfilt(flux,medianRange)\n",
+      "        fluxMed = signal.medfilt(flux,medianRange)\n",
       "        w = np.where(abs((flux-fluxMed)/np.maximum(fluxMed,50)) > 0.4)\n",
       "        for ix in w[0]:\n",
       "            flux[ix] = fluxMed[ix]\n",
@@ -51,7 +51,7 @@
       "    if ((wavelength[-np.isnan(flux)].shape[0]>0) &  (flux[-np.isnan(flux)].shape[0]>0)):\n",
       "        \n",
       "        #flatten curve by fitting a 3rd order poly\n",
-      "        fFlux = sp.optimize.curve_fit(cubic, wavelength[-np.isnan(flux)], flux[-np.isnan(flux)], p0 = [1,1,1,1])\n",
+      "        fFlux = optimize.curve_fit(cubic, wavelength[-np.isnan(flux)], flux[-np.isnan(flux)], p0 = [1,1,1,1])\n",
       "        fittedCurve = cubic(wavelength, fFlux[0][0], fFlux[0][1], fFlux[0][2], fFlux[0][3])\n",
       "        flux = flux/fittedCurve-1\n",
       "        \n",
@@ -60,7 +60,7 @@
       "\n",
       "        #resample\n",
       "        if (xDef>1):\n",
-      "            fFlux = sp.interpolate.interp1d(wavelength, flux) \n",
+      "            fFlux = interpolate.interp1d(wavelength, flux) \n",
       "            wavelength = np.linspace(min(wavelength), max(wavelength),len(wavelength)*xDef)\n",
       "            flux = fFlux(wavelength)\n",
       "\n",
@@ -197,7 +197,7 @@
       "            print 'This wl,fl sum', np.nansum(lambda2), np.nansum(flux2)\n",
       "\n",
       "            if validDates[i]==True:\n",
-      "                CCCurve = sp.signal.fftconvolve(flux1[-np.isnan(flux1)], flux2[-np.isnan(flux2)][::-1], mode='same')\n",
+      "                CCCurve = signal.fftconvolve(flux1[-np.isnan(flux1)], flux2[-np.isnan(flux2)][::-1], mode='same')\n",
       "#                 CCCurve = signal.fftconvolve(flux1, flux2[::-1], mode='same')\n",
       "#                 if i <5:\n",
       "#                     plt.plot(flux1)\n",
@@ -235,7 +235,7 @@
       "\n",
       "                    mid_px = thisCam.wavelengths.shape[1]/2\n",
       "                    dWl = (thisCam.wavelengths[i,mid_px+1]-thisCam.wavelengths[i,mid_px]) / thisCam.wavelengths[i,mid_px]\n",
-      "                    RV = dWl * pixelShift * sp.constants.c \n",
+      "                    RV = dWl * pixelShift * constants.c \n",
       "                    print 'RV',RV\n",
       "\n",
       "                    SNR = np.median(thisCam.red_fluxes[i])/np.std(thisCam.red_fluxes[i])\n",
@@ -287,7 +287,7 @@
       "\tdRV = 0\n",
       "\tif np.sum(W1)>0:\n",
       "\t\tQ_out = Q(W1, A0)\n",
-      "\t\tdRV = sp.constants.c/np.sqrt(np.sum(W1))\n",
+      "\t\tdRV = constants.c/np.sqrt(np.sum(W1))\n",
       "\t\n",
       "\treturn Q_out, dRV\n",
       "\n",
@@ -376,7 +376,7 @@
       "    return np.exp(-np.power(x - mu, 2.) / 2 / np.power(sig, 2.))\n",
       "\n",
       "def fit_gaussian(p, flux, x_range):\n",
-      "    a = sp.optimize.leastsq(diff_gausian, p, args= [flux, x_range])\n",
+      "    a = optimize.leastsq(diff_gausian, p, args= [flux, x_range])\n",
       "    return a\n",
       "\n",
       "def diff_gausian(p, args):\n",
@@ -471,7 +471,7 @@
       "    return curve\n",
       "\n",
       "def fit_quad(p, quadX, quadY):\n",
-      "    a = sp.optimize.leastsq(diff_quad, p, args= [quadX, quadY], epsfcn=0.1)\n",
+      "    a = optimize.leastsq(diff_quad, p, args= [quadX, quadY], epsfcn=0.1)\n",
       "    return a\n",
       "\n",
       "def diff_quad(p, args):\n",
@@ -626,10 +626,10 @@
       "\n",
       "        if function == 'spline':\n",
       "            order = 5 if order > 5 else order\n",
-      "            tck = sp.interpolate.splrep(splrep_disp, splrep_flux,\n",
+      "            tck = interpolate.splrep(splrep_disp, splrep_flux,\n",
       "                k=order, task=-1, t=knots, w=splrep_weights)\n",
       "\n",
-      "            continuum = sp.interpolate.splev(disp, tck)\n",
+      "            continuum = interpolate.splev(disp, tck)\n",
       "\n",
       "        elif function in (\"poly\", \"polynomial\"):\n",
       "        \n",
