--- a/Untitled5.ipynb
+++ b/Untitled5.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0ee2cbc9b4d10669c101560bdd14f63b284c3eb7a7a3c53624512e10556b8f94"
+  "signature": "sha256:cb71e5cd3ee334b5c4d7c01cc8d783fcee96a0ba878a83479f73c50710e01851"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -976,7 +976,31 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "import scipy as sp"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 110
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from scipy import optimize"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 111
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "optimize."
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
