Added barycentric npy

--- a/RVPlots.ipynb
+++ b/RVPlots.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:83540e8538c748f215add5776a6e6680099bbf08e3a647fc297b40843fd0c299"
+  "signature": "sha256:86b8d8f35058b6a6e1931773ba55d9a32175629eb2841dccc64573ff24c283af"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -229,11 +229,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def RVs_all_stars_NPYs( sigmaClip = -1, RVClip = -1, booSave = False, booShow = True):\n",
+      "def RVs_all_stars_NPYs( sigmaClip = -1, RVClip = -1, booSave = False, booShow = True, booBaryPlot = False, title = ''):\n",
       "    \n",
       "    data=np.load('data.npy')\n",
       "    RVs=np.load('RVs.npy')\n",
       "    sigmas=np.load('sigmas.npy')\n",
+      "    baryVels=np.load('baryVels.npy')\n",
       "    JDs=np.load('JDs.npy')\n",
       "\n",
       "    X = JDs\n",
@@ -254,12 +255,15 @@
       "#             thisStar = pickle.load(filehandler)\n",
       "\n",
       "    #Plots RVs, baryvels. Single star, 4 cameras\n",
-      "    plt.title('RV - All Stars')\n",
-      "#     plt.plot(JDs, -thisStar.exposures.rel_baryVels, label = 'Barycentric Vel. ')\n",
+      "    if title=='':\n",
+      "        plt.title('RV - All Stars')\n",
+      "    else:\n",
+      "        plt.title(title)\n",
+      "        \n",
+      "    if booBaryPlot==True: plt.plot(X, baryVels, label = 'Barycentric Vel. ')\n",
       "    \n",
       "    for i in range(Y.shape[0])[:]:\n",
       "        for cam in range(4)[:]:\n",
-      "            print i,cam\n",
       "#             plt.errorbar(X, Y[i,:,cam], yerr=YERR[i,:,cam], fmt='.', label = labels[cam], color = colors[cam])\n",
       "            plt.scatter(X, Y[i,:,cam], label = labels[cam], color = colors[cam])\n",
       "    \n",
