--- a/Untitled5.ipynb
+++ b/Untitled5.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:cb71e5cd3ee334b5c4d7c01cc8d783fcee96a0ba878a83479f73c50710e01851"
+  "signature": "sha256:c3224d6067cd01c1db1718846a8282f15853aeef3f0b0f28417180c14baad059"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -999,8 +999,29 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "optimize."
+      "thisStar.exposures.abs_baryVels"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 112,
+       "text": [
+        "array([ 4286.09055178,  4289.90753103,  4293.49971415,  4298.43854106,\n",
+        "        4513.01030821,  4516.36212311,  4519.71368855,  4548.30352242,\n",
+        "        4551.65269404,  4554.7783596 ,  4970.63834294,  4973.95299674,\n",
+        "        4977.48830512,  5186.7865449 ,  5190.08139605,  5193.3759337 ])"
+       ]
+      }
+     ],
+     "prompt_number": 112
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
