--- a/RVTools.ipynb
+++ b/RVTools.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7e41af0bcb0983bdcf93f969b96873962a7e720d51d00df84486297d4d52e183"
+  "signature": "sha256:4d36a48348f6e378766a6df9b72efdb4bdf991c539c95f9323d3962b50fab45f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -197,7 +197,6 @@
       "            print 'This wl,fl sum', np.nansum(lambda2), np.nansum(flux2)\n",
       "\n",
       "            if validDates[i]==True:\n",
-      "                CCCurve = signal.fftconvolve(flux1[-np.isnan(flux1)], flux2[-np.isnan(flux2)][::-1], mode='same')\n",
       "#                 CCCurve = signal.fftconvolve(flux1, flux2[::-1], mode='same')\n",
       "#                 if i <5:\n",
       "#                     plt.plot(flux1)\n",
@@ -206,9 +205,47 @@
       "#                     plt.show()\n",
       "                try:\n",
       "#                     print 'max_idx, len(CCCurve) =',np.where(CCCurve==max(CCCurve)), CCCurve.shape\n",
+      "                    CCCurve = []\n",
+      "                    CCCurve = signal.fftconvolve(flux1[-np.isnan(flux1)], flux2[-np.isnan(flux2)][::-1], mode='same')\n",
       "                    corrMax = np.where(CCCurve==max(CCCurve))[0][0]\n",
+      "                    p_guess = [corrMax,corrHWidth]\n",
+      "                    x_mask = np.arange(corrMax-corrHWidth, corrMax+corrHWidth+1)\n",
+      "                    if max(x_mask)<len(CCCurve):\n",
+      "        #                 try:\n",
+      "        #                 print '4 params',p_guess, x_mask, np.sum(x_mask), CCCurve.shape\n",
+      "                        p = fit_gaussian(p_guess, CCCurve[x_mask], np.arange(len(CCCurve))[x_mask])[0]\n",
+      "                        print 'p result',p\n",
+      "                        if np.modf(CCCurve.shape[0]/2.0)[0]>1e-5:\n",
+      "                            pixelShift = (p[0]-(CCCurve.shape[0]-1)/2.) #odd number of elements\n",
+      "                        else:\n",
+      "                            pixelShift = (p[0]-(CCCurve.shape[0])/2.) #even number of elements\n",
+      "        #                 except:\n",
+      "        #                     pixelShift = 0\n",
+      "\n",
+      "                        thisQ, thisdRV = QdRV(thisCam.wavelengths[i], thisCam.red_fluxes[i])\n",
+      "                        print  ' thisQ, thisdRV',thisQ, thisdRV\n",
+      "\n",
+      "                        mid_px = thisCam.wavelengths.shape[1]/2\n",
+      "                        dWl = (thisCam.wavelengths[i,mid_px+1]-thisCam.wavelengths[i,mid_px]) / thisCam.wavelengths[i,mid_px]\n",
+      "                        RV = dWl * pixelShift * constants.c \n",
+      "                        print 'RV',RV\n",
+      "\n",
+      "                        SNR = np.median(thisCam.red_fluxes[i])/np.std(thisCam.red_fluxes[i])\n",
+      "                    else:\n",
+      "                        R = 0\n",
+      "                        thisQ = 0\n",
+      "                        thisdRV = 0\n",
+      "                        RV = 0\n",
+      "                        SNR = 0\n",
+      "                        print 'Invalid data point'\n",
+      "\n",
       "                except: \n",
       "                    print 'cc',CCCurve,\n",
+      "                    R = 0\n",
+      "                    thisQ = 0\n",
+      "                    thisdRV = 0\n",
+      "                    RV = 0\n",
+      "                    SNR = 0\n",
       "#                     if plts<5:\n",
       "#                         plts+=1\n",
       "#                         plt.plot(flux1)\n",
@@ -216,35 +253,6 @@
       "#                         plt.plot(CCCurve)\n",
       "#                         plt.show()\n",
       "\n",
-      "                p_guess = [corrMax,corrHWidth]\n",
-      "                x_mask = np.arange(corrMax-corrHWidth, corrMax+corrHWidth+1)\n",
-      "                if max(x_mask)<len(CCCurve):\n",
-      "    #                 try:\n",
-      "    #                 print '4 params',p_guess, x_mask, np.sum(x_mask), CCCurve.shape\n",
-      "                    p = fit_gaussian(p_guess, CCCurve[x_mask], np.arange(len(CCCurve))[x_mask])[0]\n",
-      "                    print 'p result',p\n",
-      "                    if np.modf(CCCurve.shape[0]/2.0)[0]>1e-5:\n",
-      "                        pixelShift = (p[0]-(CCCurve.shape[0]-1)/2.) #odd number of elements\n",
-      "                    else:\n",
-      "                        pixelShift = (p[0]-(CCCurve.shape[0])/2.) #even number of elements\n",
-      "    #                 except:\n",
-      "    #                     pixelShift = 0\n",
-      "\n",
-      "                    thisQ, thisdRV = QdRV(thisCam.wavelengths[i], thisCam.red_fluxes[i])\n",
-      "                    print  ' thisQ, thisdRV',thisQ, thisdRV\n",
-      "\n",
-      "                    mid_px = thisCam.wavelengths.shape[1]/2\n",
-      "                    dWl = (thisCam.wavelengths[i,mid_px+1]-thisCam.wavelengths[i,mid_px]) / thisCam.wavelengths[i,mid_px]\n",
-      "                    RV = dWl * pixelShift * constants.c \n",
-      "                    print 'RV',RV\n",
-      "\n",
-      "                    SNR = np.median(thisCam.red_fluxes[i])/np.std(thisCam.red_fluxes[i])\n",
-      "                else:\n",
-      "                    R = 0\n",
-      "                    thisQ = 0\n",
-      "                    thisdRV = 0\n",
-      "                    RV = 0\n",
-      "                    print 'Invalid data point'\n",
       "\n",
       "            else:\n",
       "#                 if i==CCReferenceSet:\n",
