--- a/RVPlots.ipynb
+++ b/RVPlots.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:86b8d8f35058b6a6e1931773ba55d9a32175629eb2841dccc64573ff24c283af"
+  "signature": "sha256:33729dc6b4ca73bfe74e23492a1af67eedb535bd15b9c401bbd61034670cfaa2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -260,10 +260,10 @@
       "    else:\n",
       "        plt.title(title)\n",
       "        \n",
-      "    if booBaryPlot==True: plt.plot(X, baryVels, label = 'Barycentric Vel. ')\n",
+      "    if booBaryPlot==True: plt.plot(X, -baryVels, label = 'Barycentric Vel. ')\n",
       "    \n",
       "    for i in range(Y.shape[0])[:]:\n",
-      "        for cam in range(4)[:]:\n",
+      "        for cam in range(4)[:1]:\n",
       "#             plt.errorbar(X, Y[i,:,cam], yerr=YERR[i,:,cam], fmt='.', label = labels[cam], color = colors[cam])\n",
       "            plt.scatter(X, Y[i,:,cam], label = labels[cam], color = colors[cam])\n",
       "    \n",
