fixed SNR. Added histo plots

--- a/RVTools.ipynb
+++ b/RVTools.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fc7ef046ec52e0494edc1dc403382d0c3ceee1869ca0cccdad240b1b999c6438"
+  "signature": "sha256:cc1db0f1a01929e1d2505e6af8b6486145f4c1bb2db34583301dac8871d9d865"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -15,7 +15,7 @@
       "import numpy as np\n",
       "import pickle\n",
       "import pylab as plt\n",
-      "from scipy import interpolate, signal, optimize, constants\n",
+      "from scipy import interpolate, signal, optimize, constants, stats\n",
       "import pyfits as pf\n",
       "import sys"
      ],
@@ -28,7 +28,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "sys.path = ['', '/disks/ceres/makemake/aphot/kalumbe/reductions/NGC2477_1arc_6.2','/usr/local/yt-hg', '/home/science/staff/kalumbe/my-astro-lib', '/usr/lib/python2.7', '/usr/lib/python2.7/plat-x86_64-linux-gnu', '/usr/lib/python2.7/lib-tk', '/usr/lib/python2.7/lib-old', '/usr/lib/python2.7/lib-dynload', '/usr/lib/python2.7/dist-packages', '/usr/lib/python2.7/dist-packages/PILcompat', '/usr/lib/python2.7/dist-packages/gtk-2.0', '/usr/lib/pymodules/python2.7', '/usr/lib/python2.7/dist-packages/ubuntu-sso-client', '/usr/lib/python2.7/dist-packages/ubuntuone-client', '/usr/lib/python2.7/dist-packages/ubuntuone-couch', '/usr/lib/python2.7/dist-packages/ubuntuone-storage-protocol', '/usr/lib/python2.7/dist-packages/wx-2.8-gtk2-unicode']"
+      "# sys.path = ['', '/disks/ceres/makemake/aphot/kalumbe/reductions/NGC2477_1arc_6.2','/usr/local/yt-hg', '/home/science/staff/kalumbe/my-astro-lib', '/usr/lib/python2.7', '/usr/lib/python2.7/plat-x86_64-linux-gnu', '/usr/lib/python2.7/lib-tk', '/usr/lib/python2.7/lib-old', '/usr/lib/python2.7/lib-dynload', '/usr/lib/python2.7/dist-packages', '/usr/lib/python2.7/dist-packages/PILcompat', '/usr/lib/python2.7/dist-packages/gtk-2.0', '/usr/lib/pymodules/python2.7', '/usr/lib/python2.7/dist-packages/ubuntu-sso-client', '/usr/lib/python2.7/dist-packages/ubuntuone-client', '/usr/lib/python2.7/dist-packages/ubuntuone-couch', '/usr/lib/python2.7/dist-packages/ubuntuone-storage-protocol', '/usr/lib/python2.7/dist-packages/wx-2.8-gtk2-unicode']"
      ],
      "language": "python",
      "metadata": {},
@@ -240,7 +240,7 @@
       "                        RV = dWl * pixelShift * constants.c \n",
       "                        print 'RV',RV\n",
       "\n",
-      "                        SNR = np.median(thisCam.red_fluxes[i])/np.std(thisCam.red_fluxes[i])\n",
+      "                        SNR = np.sqrt(stats.nanmedian(thisCam.red_fluxes[i]))\n",
       "                    else:\n",
       "                        R = 0\n",
       "                        thisQ = 0\n",
@@ -249,7 +249,9 @@
       "                        SNR = 0\n",
       "                        print 'Invalid data point'\n",
       "\n",
-      "                except: \n",
+      "                except Exception,e: \n",
+      "                    print \n",
+      "                    print str(e)\n",
       "                    print 'cc',CCCurve,\n",
       "                    R = 0\n",
       "                    thisQ = 0\n",
