--- a/random_tests.ipynb
+++ b/random_tests.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c3224d6067cd01c1db1718846a8282f15853aeef3f0b0f28417180c14baad059"
+  "signature": "sha256:0b75f53c1e813d309dedda8366307ba1e6bcc18b9ae7f3a016a4f5615a2bfa3f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -827,7 +827,7 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 231
     },
     {
      "cell_type": "code",
@@ -853,15 +853,15 @@
      "collapsed": false,
      "input": [
       "# filename = 'Giant01.obj'\n",
-      "filename = 'Brght01.obj'\n",
-      "# filename = 'red_Giant01.obj'\n",
+      "# filename = 'Brght01.obj'\n",
+      "filename = 'red_Giant01.obj'\n",
       "filehandler = open(filename, 'r')\n",
       "thisStar = pickle.load(filehandler)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 72
+     "prompt_number": 232
     },
     {
      "cell_type": "code",
@@ -887,29 +887,30 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "plt.plot(thisCam.red_fluxes[])\n",
+      "plt.plot(thisCam.red_fluxes[0])\n",
       "plt.show()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 82
+     "prompt_number": 235
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "thisCam = thisStar.exposures.cameras[2]"
+      "thisCam = thisStar.exposures.cameras[3]\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 105
+     "prompt_number": 239
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "print thisCam.SNRs\n",
       "print np.nansum(thisCam.red_fluxes,1)\n",
       "print thisCam.fileNames"
      ],
@@ -920,18 +921,21 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[       0.                0.                0.                0.\n",
-        "  2571291.45830536  2580621.85726929  2276383.61502838  2599952.96594238\n",
-        "  2464015.6222229   1266911.72452927  2371599.25584412  2684145.14459229\n",
-        "  2587761.78688812  1171622.42687988  1545263.81750488  1600196.55238342]\n",
-        "['' '' '' '' '22aug30027red.fits' '22aug30028red.fits' '22aug30029red.fits'\n",
-        " '22aug30048red.fits' '22aug30049red.fits' '22aug30050red.fits'\n",
-        " '24aug30050red.fits' '24aug30051red.fits' '24aug30052red.fits'\n",
-        " '25aug30035red.fits' '25aug30036red.fits' '25aug30037red.fits']\n"
+        "[ 357.64439829  282.15521687  161.39792452  244.43131544  317.82667741\n",
+        "  310.4912061   312.11264743  424.02645849  344.74023282  210.44685066\n",
+        "  205.68299429  194.9054809     0.            0.            0.        ]\n",
+        "[  4.55187066e+08   2.81631516e+08   9.25882388e+07   2.11867813e+08\n",
+        "   3.60509773e+08   3.43098691e+08   3.46584643e+08   6.58571607e+08\n",
+        "   4.37689870e+08   1.64507269e+08   1.57501181e+08   1.41299043e+08\n",
+        "   0.00000000e+00   0.00000000e+00   0.00000000e+00]\n",
+        "['20aug40053red.fits' '21aug40041red.fits' '21aug40042red.fits'\n",
+        " '21aug40043red.fits' '22aug40036red.fits' '22aug40037red.fits'\n",
+        " '22aug40038red.fits' '24aug40058red.fits' '24aug40059red.fits'\n",
+        " '24aug40060red.fits' '24aug40061red.fits' '24aug40062red.fits' '' '' '']\n"
        ]
       }
      ],
-     "prompt_number": 106
+     "prompt_number": 240
     },
     {
      "cell_type": "code",
@@ -1017,6 +1021,286 @@
       }
      ],
      "prompt_number": 112
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "pwd"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 113,
+       "text": [
+        "u'/Users/Carlos/Documents/HERMES/reductions/47Tuc_core_6.2'"
+       ]
+      }
+     ],
+     "prompt_number": 113
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print RVs[0].shape"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "(16, 4)\n"
+       ]
+      }
+     ],
+     "prompt_number": 195
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "cd '/Users/Carlos/Documents/HERMES/reductions/47Tuc_core_6.2'"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "/Users/Carlos/Documents/HERMES/reductions/47Tuc_core_6.2\n"
+       ]
+      }
+     ],
+     "prompt_number": 178
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "RVs = np.load('RVs.npy')\n",
+      "SNRs = np.load('SNRs.npy')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 179
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for epoch in range(RVs.shape[1]):\n",
+      "    cam = 0\n",
+      "    R = RVs[:,epoch,cam]\n",
+      "    S = SNRs[:,epoch,cam]\n",
+      "    a = np.histogram(R)\n",
+      "    plt.bar(a[1][:-1],a[0], width = (a[1][-2]-a[1][-1])*0.7)\n",
+      "    plt.plot(R,S,'.', c='r')\n",
+      "    plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 198
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = np.histogram(R)\n",
+      "# plt.plot(a[1][:-1],a[0],'.')\n",
+      "plt.bar(a[1][:-1],a[0], width = (a[1][-2]-a[1][-1])*0.7)\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 193
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = np.histogram(R)\n",
+      "plt.plot(R,S,'.', c='r')\n",
+      "# plt.bar(a[1][:-1],a[0], width = (a[1][-2]-a[1][-1])*0.7)\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 192
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "R = RVs[:,15,0]\n",
+      "S = SNRs[:,15,0]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 164
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = np.histogram(R)\n",
+      "# plt.plot(a[1][:-1],a[0],'.')\n",
+      "plt.bar(a[1][:-1],a[0], width = (a[1][-2]-a[1][-1])*0.7)\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 166
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import os"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 172
+    },
+    {
+     "cell_type": "code",
+     "collapsed": true,
+     "input": [
+      "os.curdir"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 173,
+       "text": [
+        "'.'"
+       ]
+      }
+     ],
+     "prompt_number": 173
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "pwd"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 174,
+       "text": [
+        "u'/Users/Carlos/Documents/HERMES/reductions/47Tuc_core_6.2'"
+       ]
+      }
+     ],
+     "prompt_number": 174
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "os.getcwd().split('/')[-1]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 177,
+       "text": [
+        "'47Tuc_core_6.2'"
+       ]
+      }
+     ],
+     "prompt_number": 177
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "plt.plot(thisCam.red_fluxes)\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 201
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "i=6\n",
+      "np.nanmean(thisCam.red_fluxes[i])/np.std(thisCam.red_fluxes[i])\n",
+      "print np.sqrt(np.nanmean(thisCam.red_fluxes[i]))\n",
+      "print np.nansum(thisCam.red_fluxes[i])\n",
+      "print stats.nanmedian(thisCam.red_fluxes[i])/stats.nanstd(thisCam.red_fluxes[i])\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "23.6033444571\n",
+        "2276383.61503\n",
+        "9.6440414162\n"
+       ]
+      }
+     ],
+     "prompt_number": 220
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from scipy import stats"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 217
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print np.sqrt(stats.nanmedian(thisCam.red_fluxes[i]))\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "23.8838187503\n"
+       ]
+      }
+     ],
+     "prompt_number": 218
     },
     {
      "cell_type": "code",
